<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PR3 printer settings</string>
    <string name="action_settings">End</string>

    <!-- PrintActivity resources -->
    <string name="print">Print</string>
    <string name="sign">Sign</string>
    <string name="ProgressStatus">Progress and Status</string>
    <string name="enter_printer_id">Enter a Printer ID</string>
    <string name="bluetooth_connection">Bluetooth</string>
    <string name="serial_connection">Serial</string>
    <string name="enter_mac_address">Enter a MAC address</string>
    <string name="enter_serial_port_name">Enter a serial port name</string>
    <string name="enter_opt_text">Enter optional text to print</string>
    <string name="signature_imageview_desc">Signature image</string>

    <!-- CaptureSignatureActivity resources -->
    <string name="title_activity_capture_signature">Sign</string>
    <string name="sign_below">Sign below</string>
    <string name="button_save">Save</string>
    <string name="button_clear">Clear</string>
    <string name="button_cancel">Cancel</string>

</resources>